fix-bag scrollbar

--- a/static/main_page/style.css
+++ b/static/main_page/style.css
@@ -15,8 +15,19 @@ body {
     background-color: white;
 }
 
-body::-webkit-scrollbar {
-  display: none;
+::-webkit-scrollbar {
+    width: 16px;
+    /*border-radius: 10px;*/
+}
+
+::-webkit-scrollbar-track {
+    background-color: white;
+    border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #0f0900;
+    /*border-radius: 100px;*/
 }
 
 .colider {
